--- a/src/404.html
+++ b/src/404.html
@@ -32,7 +32,7 @@
 		</ul>
 	</div>
 </section>
-<section class="chatWindow"></section>
+<section class="chatWindow"><h2>Page Not Found!</h2></section>
 <div id="messageBox">
 	<form id= "target">
 		<input type="text" id="textbox" placeholder="type message">
