updated version with message saving

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Chat Client</title>
 	<link rel="stylesheet" href="style.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="jquery.min.js"></script>
 	<script src="main.js"></script>
 </head>
 <body>
@@ -35,7 +35,7 @@
 <section class="chatWindow"></section>
 <div id="messageBox">
 	<form id= "target">
-		<input type="text" id="textbox" placeholder="type message">
+		<input type="text" id="textbox" placeholder="type message and hit return">
 	</form>
 </div>
 
